[ADD] contact us

--- a/index.html
+++ b/index.html
@@ -246,6 +246,35 @@
             </section>
             <footer class="mastfoot pb-5 bg-white section-padding pb-0">
                 <div class="inner container">
+                    <div class="row">
+                        <div class="col-md-6 d-flex align-items-start">
+                            <div>
+                            <div class="col-md-12 d-flex align-items-center"><a class=nav-link
+                                    href=https://www.mamstr.com/t_and_c.html>Terms and Conditions</a></div>
+                            <div class="col-md-12 d-flex align-items-center"><a class=nav-link
+                                    href=https://www.mamstr.com/refund.html>Refund Policy</a></div>
+                            <div class="col-md-12 d-flex align-items-center"><a class=nav-link
+                                    href=https://www.mamstr.com/policies.html>Privacy Policy</a></div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 d-flex align-items-end">
+                            <div>
+                            <div>
+                                <h4>Contact us</h4>
+                            </div>
+                            <div>
+                                <p>Email: mamstrltd@gmail.com</p>
+                            </div>
+                            <div>
+                                <p>Phone: +91-8553732643</p>
+                            </div>
+                            <div>
+                                <p>Office: 2-1-240, Siddique Shah Taleem, Bidar-District, Karnataka-585401 India</p>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+
                     <div class=row>
                         <div class=col-lg-4>
                             <div class="footer-widget pr-lg-5 pr-0"><img src=https://www.mamstr.com/img/launch_image.png
@@ -261,24 +290,6 @@
                         <div class="col-md-12 d-flex align-items-center">
                             <p class="mx-auto text-center mb-0">&copy 2021 Mamstr | Built with ❤️ using <a
                                     href=https://gohugo.io>Hugo</a></p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6 d-flex align-items-start">
-                            <div>
-                            <div class="col-md-12 d-flex align-items-center"><a class=nav-link
-                                    href=https://www.mamstr.com/t_and_c.html>Terms and Conditions</a></div>
-                            <div class="col-md-12 d-flex align-items-center"><a class=nav-link
-                                    href=https://www.mamstr.com/refund.html>Refund Policy</a></div>
-                            <div class="col-md-12 d-flex align-items-center"><a class=nav-link
-                                    href=https://www.mamstr.com/policies.html>Privacy Policy</a></div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 d-flex align-items-end">
-                            <div>
-                                <p>Bidar, Karnataka, India</p>
-                                <p>mamstrltd@gmail.com</p>
-                            </div>
                         </div>
                     </div>
                 </div>
